mini-kube-demo/integrated-demo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cra
  namespace: cra
spec:
  replicas: 3
  minReadySeconds: 10
  selector:
    matchLabels:
      app: cra
  template:
    metadata:
      labels:
        app: cra
    spec:
      containers:
        - name: cra
          image: vincexgliu/create-react-app:2.0.1
# use --- to split different k8s resources
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koa2
  namespace: koa2
spec:
  replicas: 3
  minReadySeconds: 10
  selector:
    matchLabels:
      app: koa2
  template:
    metadata:
      labels:
        app: koa2
    spec:
      containers:
        - name: koa2
          image: vincexgliu/koa2-server:1.0.3
          env: # pass environment variables
            - name: NODE_ENV
              value: "production"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i18n
  namespace: i18n
spec:
  replicas: 3
  minReadySeconds: 10
  selector:
    matchLabels:
      app: i18n
  template:
    metadata:
      labels:
        app: i18n
    spec:
      containers:
        - name: i18n
          image: vincexgliu/i18n:1.0.0
