mini-kube-demo/integrated-demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cra
  namespace: cra
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 80
  selector:
    app: cra
# use --- to split different k8s resources
---
apiVersion: v1
kind: Service
metadata:
  name: koa2
  namespace: koa2
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: koa2
---
apiVersion: v1
kind: Service
metadata:
  name: i18n
  namespace: i18n
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: i18n
