mini-kube-demo/integrated-demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cra-ingress
  namespace: cra
spec:
  rules:
    - host: learn-k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cra
                port:
                  number: 3000
# use --- to split different k8s resources
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koa2-ingress
  namespace: koa2
spec:
  rules:
    - host: learn-k8s.com
      http:
        paths:
          - path: /api/v1/serverInfo
            pathType: Prefix
            backend:
              service:
                name: koa2
                port:
                  number: 8080
